unpackaged/main/default/objects/Flight_Booking__c/Flight_Booking__c.object-meta.xml
<CustomObject>
    <label>Flight</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Flight #</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Flights</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>