unpackaged/main/default/objects/Flight_Booking__c/fields/Airline__c.field-meta.xml
<CustomField>
    <fullName>Airline__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Airline</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Cannot find airline.</errorMessage>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Vendor Account - Generic</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Flights</relationshipLabel>
    <relationshipName>Flights</relationshipName>
    <type>Lookup</type>
</CustomField>