unpackaged/main/default/objects/Flight_Booking__c/fields/Arrival_Airport__c.field-meta.xml
<CustomField>
    <fullName>Arrival_Airport__c</fullName>
    <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
    <label>Arrival Airport</label>
    <length>200</length>
    <type>Text</type>
</CustomField>