unpackaged/main/default/objects/Flight_Booking__c/fields/Arrival_Date__c.field-meta.xml
<CustomField>
    <fullName>Arrival_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Arrival Date</label>
    <type>DateTime</type>
</CustomField>