unpackaged/main/default/objects/Flight_Booking__c/fields/Arrival_Time__c.field-meta.xml
<CustomField>
    <fullName>Arrival_Time__c</fullName>
    <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
    <label>Arrival Time</label>
    <length>100</length>
    <type>Text</type>
</CustomField>