unpackaged/main/default/objects/Flight_Booking__c/fields/ArrivalDateforEmail__c.field-meta.xml
<CustomField>
    <fullName>ArrivalDateforEmail__c</fullName>
    <formula>IF( Arrival_DST__c = true,  Arrival_Date__c - (4/24), Arrival_Date__c - (5/24))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ArrivalDateforEmail</label>
    <type>DateTime</type>
</CustomField>