unpackaged/main/default/objects/Flight_Booking__c/fields/Departure_City__c.field-meta.xml
<CustomField>
    <fullName>Departure_City__c</fullName>
    <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
    <label>Departure City</label>
    <length>200</length>
    <type>Text</type>
</CustomField>