unpackaged/main/default/objects/Flight_Booking__c/fields/Departure_Date__c.field-meta.xml
<CustomField>
    <fullName>Departure_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Departure Date</label>
    <type>DateTime</type>
</CustomField>