unpackaged/main/default/objects/Flight_Booking__c/fields/Departure_DST__c.field-meta.xml
<CustomField>
    <fullName>Departure_DST__c</fullName>
    <formula>AND( datevalue(Departure_Date__c) &gt;= DATE(YEAR(Datevalue(Departure_Date__c )),3,8) + CASE(MOD(DATE(YEAR(Datevalue(Departure_Date__c )),3,8) - DATE(1900,1,7),7), 0, 0, 1, 6, 2, 5, 3, 4, 4, 3, 5, 2, 1), datevalue(Departure_Date__c ) &lt; DATE(YEAR(Datevalue(Departure_Date__c )),11,1) + CASE(MOD(DATE(YEAR(Datevalue(Departure_Date__c)),11,1) - DATE(1900,1,7),7), 0, 0, 1, 6, 2, 5, 3, 4, 4, 3, 5, 2, 1))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Departure DST</label>
    <type>Checkbox</type>
</CustomField>