unpackaged/main/default/objects/Flight_Booking__c/fields/DepartureTime__c.field-meta.xml
<CustomField>
    <fullName>DepartureTime__c</fullName>
    <formula>/* OLD: IF((Departure_Time__c = ''  || ISNULL(Departure_Time__c)) ,TIMEVALUE("00:00:0.0"),TIMEVALUE(Departure_Time__c)) */
/*IF(
ISBLANK(DepartureTimeForEmail__c), TIMEVALUE("00:00:00.000"),TIMEVALUE(DepartureTimeForEmail__c))*/

IF(
ISBLANK(DepartureTimeForEmail__c), TIMEVALUE("00:00:00.000"),
IF( Departure_DST__c = true, TIMEVALUE(DepartureTimeForEmail__c- (4/24)),
TIMEVALUE(DepartureTimeForEmail__c- (5/24))
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Departure Time</label>
    <type>Time</type>
</CustomField>