unpackaged/main/default/objects/Flight_Booking__c/fields/DepartureTimeForEmail__c.field-meta.xml
<CustomField>
    <fullName>DepartureTimeForEmail__c</fullName>
    <formula>IF( Departure_DST__c = true,  Departure_Date__c - (4/24), Departure_Date__c - (5/24))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DepartureTimeForEmail</label>
    <type>DateTime</type>
</CustomField>