unpackaged/main/default/objects/Flight_Booking__c/fields/Duration__c.field-meta.xml
<CustomField>
    <fullName>Duration__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Duration</label>
    <length>200</length>
    <type>Text</type>
</CustomField>