unpackaged/main/default/objects/Flight_Booking__c/fields/Flight_Number__c.field-meta.xml
<CustomField>
    <fullName>Flight_Number__c</fullName>
    <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
    <label>Flight Number</label>
    <length>200</length>
    <type>Text</type>
</CustomField>