unpackaged/main/default/objects/Flight_Booking__c/fields/Flight_Summary__c.field-meta.xml
<CustomField>
    <fullName>Flight_Summary__c</fullName>
    <formula>Departure_City__c &amp; " to  " &amp; Arrival_City__c &amp; " leaving " &amp; TEXT(Month(DATEVALUE(Departure_Date__c))) &amp; "/" &amp;TEXT(DAY(DATEVALUE(Departure_Date__c))) &amp; "/" &amp; TEXT(YEAR(DATEVALUE(Departure_Date__c)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Flight Summary</label>
    <type>Text</type>
</CustomField>