unpackaged/main/default/objects/Flight_Booking__c/fields/Logbook__c.field-meta.xml
<CustomField>
    <fullName>Logbook__c</fullName>
    <label>Logbook</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Flights</relationshipLabel>
    <relationshipName>Flight_Bookings</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>