unpackaged/main/default/objects/Flight_Booking__c/fields/Name_for_Itinerary__c.field-meta.xml
<CustomField>
    <fullName>Name_for_Itinerary__c</fullName>
    <formula>"Flight: " &amp; Airline__r.Name &amp; " " &amp; Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Name for Itinerary</label>
    <type>Text</type>
</CustomField>