unpackaged/main/default/objects/Flight_Booking__c/fields/of_Passengers__c.field-meta.xml
<CustomField>
    <fullName>of_Passengers__c</fullName>
    <label># of Passengers</label>
    <summaryForeignKey>Airline_Ticket__c.Flight__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>