unpackaged/main/default/objects/Flight_Booking__c/fields/Prepared_For__c.field-meta.xml
<CustomField>
    <fullName>Prepared_For__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Prepared For</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Flight_Bookings</relationshipName>
    <type>Lookup</type>
</CustomField>