unpackaged/main/default/objects/Flight_Booking__c/fields/Price_Per_Person__c.field-meta.xml
<CustomField>
    <fullName>Price_Per_Person__c</fullName>
    <inlineHelpText>Fill out this field to replace logbook field</inlineHelpText>
    <label>Price Per Person</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>