unpackaged/main/default/objects/Flight_Booking__c/fields/Refundable__c.field-meta.xml
<CustomField>
    <fullName>Refundable__c</fullName>
    <inlineHelpText>Fill out this field to replace logbook field</inlineHelpText>
    <label>Refundable</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Refundable</fullName>
            </value>
            <value>
                <fullName>Non-Refundable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>